--- a/CmsShoppingCart/Areas/Admin/Views/Categories/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Categories/Index.cshtml
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Slug)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -22,6 +25,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Slug)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
