--- a/CmsShoppingCart/Areas/Admin/Views/_ViewImports.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using CmsShoppingCart
 @using CmsShoppingCart.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper CmsShoppingCart.Infrastructure.*, CmsShoppingCart
+
 
