--- a/CmsShoppingCart/Views/_ViewImports.cshtml
+++ b/CmsShoppingCart/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CmsShoppingCart
 @using CmsShoppingCart.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper CmsShoppingCart.Infrastructure.*,CmsShoppingCart
 
